# youtube-snap

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: downloader.py  utils.py
src/youtube_snap/: downloader.py  extractor.py  pdf_generator.py  utils.py
tests/: test_pdf_generation.py  test_time_stamp.py  test_video_to_frame.py  test_yt_download.py
